--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Gilded Age Weddings
 tagline: A collection of aspects of wedding during 1870-1910 in America
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: The Gilded Age was a period in American history in which industrialization was rapidly growing.
+description: The Gilded Age was a period in American history in which industrialization was rapidly growing. Which was shown through great wealth and prosperity, displayed in this collection through weddings.
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Tessa Campbell, Ellie Watson & Ava Chimienti
 
